
	Less flicker on preview window update.

	Clean occasional graphics leftovers after disabling preview.

	Ignore file decorations ('classify') on sorting custom views.  Thanks to
	filterfalse.

	Do not invoke vifmrc-converter to update color scheme names if no color
	schemes were found.

	Display 'timefmt' date along with RFC 2822 date in file info.  Thanks to
	Svyatoslav Mishyn (a.k.a. juef).

	Fixed pane titles update on switching panes.

	Fixed build on OpenBSD.  Patch by Brian Callahan (a.k.a. ibara).

	Fixed redrawing of dialogs requested via startup commands.  Thanks to
	filterfalse.

	Fixed removal of original directories during merging with 'syscalls' on.
	Thanks to willemw12.

	Fixed directory merging when 'syscalls' is off.  Thanks to willemw12.

	Fixed option completion to do not provide completion for "noall" or
	"invall", which isn't valid.

	Fixed dialog message centering which could be off by one.

	Fixed work on OpenBSD (at least to some degree that curses implementation
	there allows).  There are still some troubles with non-ascii characters.
	Thanks to hofheinz.

	Fixed possible constant view reload when built on some systems.  Thanks to
	hofheinz.

	Fixed error reporting on builtin function argument parsing in rhs of :let
	expression.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Fixed truncating viewed file on 'wrap', 'tabstop' > 2 and line wrapping
	caused by tabulation.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Fixed copying of fifo, socket and device files with 'syscalls' enabled.
	Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Fixed compilation with musl.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Fixed build on FreeBSD.  Thanks to bsdmp.

	Fixed not drawing local colorscheme once after setting global one.

	Fixed priority of abbreviations for user-defined commands with trailing
	"!" or "?", which shouldn't be preferred over corresponding builtin
	abbreviation.

0.7.8 to 0.8-beta
